# LoL-Coach

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  run_backend.sh  run_frontend.sh
backend/: .env.example  Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt  run.sh
backend/app/: main.py
backend/app/api/v1/: explain.py  recommend.py  router.py
backend/app/config/: settings.py
backend/app/config/definitions/: ingest.yaml  scoring.yaml
backend/app/genai/: __init__.py  client.py  explanations.py  prompts.py
backend/app/ingest/: README.md  __init__.py  crawler.py  ddragon.py  main.py  pipeline.py  processor.py  steps.py
backend/app/ingest/clients/: crawler.py
backend/app/ingest/domain/: aggregator.py  parser.py  persistence.py
backend/app/ingest/steps/: __init__.py  aggregate.py  cleanup.py  download.py  history.py  ladder.py  parse.py  static.py
backend/app/ml/: README.md  __init__.py  artifacts.py  build_tables.py
backend/app/ml/scoring/: __init__.py  config.py  inference.py
backend/app/ml/training/: __init__.py  artifact_stats.py  manifest_data.py  smoothing_config.py
backend/app/riot_accessor/: __init__.py  client.py  http.py  routing.py  schemas.py
backend/app/riot_accessor/endpoints/: league_v4.py  league_v4_high_elo.py  match_v5.py  summoner_v4.py
backend/app/schemas/: explain.py  recommend.py
backend/app/services/: __init__.py  explain_service.py  model_registry.py  recommend_service.py
backend/app/utils/: logger.py  time.py
backend/artifacts/draft_model/: latest.json
backend/src/backend/: main.py
backend/src/backend/genai/: __init__.py  client.py  explanations.py  prompts.py
backend/src/backend/routes/: explain.py  recommend.py  router.py
backend/src/backend/schemas/: explain.py  recommend.py
backend/src/backend/services/: explain_service.py  recommend_service.py
backend/tests/: conftest.py  test_main.py
backend/tests/api/v1/: test_explain.py  test_recommend.py  test_router.py
backend/tests/config/: test_settings.py
backend/tests/domain/: test_enums.py
backend/tests/genai/: test_explanations.py  test_genai_client.py  test_prompts.py
backend/tests/ingest/: test_crawler.py  test_ddragon.py  test_main.py  test_pipeline.py  test_processor.py  test_steps.py
backend/tests/ingest/clients/: test_crawler.py  (+1 more)
backend/tests/integration/: test_recommend_e2e.py
backend/tests/ml/: test_artifacts.py  test_build_tables.py
backend/tests/riot_accessor/: test_client.py  test_http_client.py  test_routing.py  test_schemas.py
backend/tests/schemas/: test_recommend_schema.py
backend/tests/services/: test_explain_service.py  test_model_registry.py  test_recommend_service.py
backend/tests/utils/: test_logger.py  test_time.py
core/: __init__.py  pyproject.toml  run.sh
core/tests/: test_settings.py  test_time.py
ingest/: __init__.py  pyproject.toml  run.sh
ingest/src/ingest/: cli.py  download.py  history.py  ladder.py  pipeline.py  static.py
ingest/tests/: test_cli.py  test_pipeline.py
ingest/tests/clients/: test_client.py  test_crawler.py  test_ddragon.py  test_http_client.py  test_routing.py  test_schemas.py
ingest/tests/outputs/: test_persistence.py
ingest/tests/parsers/: test_parser.py
ingest/tests/steps/: test_aggregate.py  test_cleanup.py  test_download.py  test_history.py  test_ladder.py  test_parse.py  test_static.py
ingest/tests/transforms/: test_aggregator.py
(+155 files in other folders)
