[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest"
version = "0.1.0"
description = "Offline data ingestion for LoL Coach"
dependencies = [
    "core",
    "httpx",
    "pandas",
    "requests",
    "tqdm",
    "tenacity",
]

[tool.setuptools.packages.find]
where = ["src"]
